<resources>
    <string name="app_name">Job Fixer</string>
    <string name="welcome_msg">welcome to job fixer!!!</string>
    <string name="user_home_msg">Find Your Perfect Job</string>
    <string name="resume">Resume</string>
    <string name="search">Search</string>
    <string name="all_jobs">View Jobs &amp; View Job Request</string>
    <string name="help_center">Help Center</string>
    <string name="log_out">Logout</string>
    <string name="profile">Profile</string>
    <string name="company_home_msg">Recruit Your Employee</string>
    <string name="create_jobs">Create New Jobs &amp; View Existing Jobs</string>
    <string name="requests">Requests</string>
    <string name="c_profile">Company Profile</string>
    <string name="admin_home_msg">Welcome to Admin Panel</string>
    <string name="create_ad">Create Job Ads &amp; View Existing Ads</string>
    <string name="view_app_jobs">Create New Jobs &amp; View Existing Jobs </string>
    <string name="job_approve_requests">Job Approval Requests</string>
    <string name="help_center_req">Help Center Requests</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="job_cte_msg">Create New Advertisement</string>
    <string name="job_up_msg">Update Advertisement</string>
    <string-array name="job_cat">
        <item>Accounts</item>
        <item>Technology sector</item>
        <item>Software Engineering</item>
        <item>Sales Job</item>
        <item>Medical</item>

    </string-array>
    <string name="job_tit"> Job Title</string>
    <string name="comp_name">Company Name </string>
    <string name="com_add">Company Address</string>
    <string name="job_t">Job Type</string>
    <string name="job_sal">Job Salary</string>
    <string name="ad_cte_btn">Create</string>
    <string name="ad_up_btn">Update</string>
    <string name="job_ad_msg">Advertisements</string>
    <string name="job_view_name">Software Engineer</string>
    <string name="comp_view_name">Sysco Lab </string>
    <string name="com_view_add">Colombo 02</string>
    <string name="job_view_sal">Up to 60000/Month</string>
    <string name="view_remove_btn">Remove</string>
    <string name="view_update_btn">Update</string>
    <string name="q_Desc">Degree in IT or SE, 2 Years Minimum Job Experience , A good team player , Good communication Skills</string>
    <string name="quaTit">Qualification :</string>
    <string name="job_view_name2">Software Architect</string>
    <string name="comp_view_name2">IFS </string>
    <string name="com_view_add2">Colombo 03</string>
    <string name="job_view_sal2">Up to 80000/Month</string>
    <string name="job_ad_user_msg">Still Looking For A Job!!!!!!</string>
    <string name="view_job_btn">View more</string>
    <string name="view_apply_btn">Apply</string>
    <string name="qualifcText">Qualification</string>
    <string name="jDesc">JOB DESCRIPTION</string>
    <string name="jobReq">Job Requirements</string>
    <string name="btnH">home</string>
    <string name="signTitle">Create Account</string>
    <string name="register_btn_name">Register</string>
    <string name="register_login_name">Log In</string>
    <string name="login_title">Log In</string>
    <string name="app_login_title">Job Fixer</string>
    <string name="btn_login_pg">Log in</string>
    <string name="btn_login_signup">Register</string>
    <string name="admin_link">Admin Login</string>
    <string name="user_link">User Login</string>
    <string name="admin_login_title">Admin Log In</string>
    <string name="register_uType">User Type</string>
    <string name="comp_rep_to_user_job_btn">Send Message</string>
    <string name="com_req_job_rep_layout_title">Respone to the Applicant</string>
    <string name="applicant_req_title">Applicant Requests</string>
    <string name="comp_req_view_layout_title">Company Requests</string>
    <string-array name="jobCat">
        <item>Information Technology</item>
        <item>Business Management and Administration</item>
        <item>Engineering</item>
        <item>Hospitality and Tourism</item>
        <item>Architecture and Construction</item>
    </string-array>
    <string-array name="itJobCat">
        <item>Software Engineer</item>
        <item>Database Administrator</item>
        <item>Software Architect</item>
        <item>Network Engineer</item>
        <item>Data Scientist</item>
    </string-array>
    <string-array name="bmJobCat">
        <item>Accountant</item>
        <item>Auditors</item>
        <item>Budget Analyst</item>
        <item>Financial Manager</item>
        <item>Marketing Manager</item>
    </string-array>
    <string-array name="htJobCat">
        <item>Food Service Manager</item>
        <item>Lodging Manager</item>
        <item>Waiters or Waitresses</item>
        <item>Cooks, Restaurant</item>
        <item>Bartender</item>
    </string-array>
    <string-array name="enJobCat">
        <item>Automotive Engineer</item>
        <item>Mechanical Engineer</item>
        <item>Electric Engineer</item>
        <item>Electronic Engineer</item>
        <item>Materials Engineer</item>
    </string-array>
    <string-array name="arJobCat">
        <item>Civil Engineer</item>
        <item>Architect</item>
        <item>Quantity saviour</item>
        <item>Construction Manager</item>
        <item>Electricians</item>
    </string-array>
    <string-array name="jobTy">
        <item>Full Time</item>
        <item>Part Time</item>
        <item>Internship</item>
    </string-array>
    <string-array name="UserTy">
        <item>Job Seeker</item>
        <item>Company</item>
    </string-array>
    <string name="job_Category">Job Category</string>
    <string name="job_title">Job Title </string>
    <string name="Work_place_address">Company Address </string>
    <string name="Work_place_address_hint">Work place Address</string>
    <string name="job_type">Job Type </string>
    <string name="Salary">Salary (per month)</string>
    <string name="Salary_hint">Salary</string>
    <string name="Job_Description">Job Description</string>
    <string name="Job_Description_hint">Job Description</string>
    <string name="Post_Job_btn">Post Job</string>
    <string name="Update_Job_btn">Update</string>
    <string name="Cancel_btn">Cancel</string>
    <string name="Company_Jobs_Heading">  Company Jobs</string>
    <string name="Company_view_title">Software Engineer </string>
    <string name="Company_view_Cname">IFS</string>
    <string name="Company_view_Address"> Colombo 10 </string>
    <string name="Rs">Rs </string>
    <string name="Company_View_Remove_btn">Remove</string>
    <string name="Company_View_Edit_btn">Edit</string>
    <string name="compName">Company Name</string>
    <string name="AddNewJob">Add New Job</string>
    <string name="user_View_btn">View more</string>
    <string name="user_apply_btn">Apply</string>
    <string name="JobDesc">Job Description :</string>
    <string name="job">Jobs</string>
    <string name="Job_Request_Btn">Job Request</string>
    <string name="job_view_n">Software Engineer</string>
    <string name="comp_view_n">Sysco Lab </string>
    <string name="com_view_a">Colombo 02</string>
    <string name="job_view_t">Full Time</string>
    <string name="job_view_ad">AD</string>
    <string name="job_view_s">Up to 60000/Month</string>
    <string name="ad_view_cte_btn">Create Advertisements</string>
    <string name="view_ap_btn">Apply</string>
    <string name="view_j_btn">View</string>
    <string name="job_view_n2">Software Architect</string>
    <string name="comp_view_n2">IFS </string>
    <string name="com_view_a2">Colombo 03</string>
    <string name="job_view_s2">Up to 80000/Month</string>
    <string name="job_search_title">Search for your next job</string>
    <string name="job_helpcenter1">Get in Touch</string>
    <string name="job_helpcenter2">want to Get in Touch?We love to hear from you</string>
    <string name="job_helpcenter3">Here is how you can reach us...</string>
    <string name="job_helpcenter4">Name :</string>
    <string name="job_helpcenter5">Email :</string>
    <string name="job_helpcenter6">How can we help ?</string>
    <string name="job_helpcenter7">Contact Customer Support</string>
    <string name="job_helpcenter8">Talk to us</string>
    <string name="job_helpcenter14">Just pick up the phone to speak with a member  </string>
    <string name="job_helpcenter10">of our team</string>
    <string name="job_helpcenter13">+945976585491</string>
    <string name="job_viewreq1">View Requests</string>
    <string name="adminreq">Admin Requests</string>
    <string name="adminmsg1">PAUL</string>
    <string name="adminmsg11">I’m also in the </string>
    <string name="adminmsg2">SMITH</string>
    <string name="adminmsg22">I’m a college senior interested in working in marketing. For the last year, I’ve been following your work for Bryan and Associates, and it’s really impressed me. I particularly  </string>
    <string name="adminmsg3">I’ve been following your work for Bryan and Associates, and it’s really impressed me. I particularly </string>
    <string name="adminmsg31">JESICA</string>
    <string name="adminmsg33">I was really impressed by the </string>
    <string name="adminmsg4"> social media strategy you put together for Bella Bru Coffee Shop. I’m also a small business owner </string>
    <string name="usermsg1">USER REQUEST</string>
    <string name="usermsg11">COM BANK</string>
    <string name="usermsg2">You have satisfied the prerequisites for the Job Request application. For more information, see Job Requests</string>
    <string name="usermsg22">VIRTUZA</string>
    <string name="usermsg3">Financial institutions are experiencing a wave of transformation as emerging technology and market conditions impact client behavior. To help banks retain clients and remain relevant in a competitive industry, we designed Virtu</string>
    <string name="usermsg33">IFS</string>
    <string name="usermsg4">Register today for this segment of an upcoming Amazon Web Services (AWS) webinar series, featuring Eric Martinez, CEO, and Founder of modjoul. Learn how he partnered with Virtusa and AWS to create a mobile app and intelligent workplace  </string>
    <string name="usermsg44">UNILIVER</string>
    <string name="usermsg5">Prepare for the upcoming compliance deadline for the final Centers for Medicare and Medicaid Services (CMS) interoperability rules with a streamlined solution for coordinated care and improved health outcomes. Download the brochu</string>
    <string name="usermsg55">For insurance companies, agility and speed are critical in the underwriting process. Read on to learn how we</string>
    <string name="userrep1">GET IN </string>
    <string name="v_head">Resume</string>
    <string name="v_name">JOHN SMITH</string>
    <string name="v_city">kandy</string>
    <string name="v_phone">0775689246</string>
    <string name="v_mail">JohnK@gmail.com</string>
    <string name="v_Role">Software Engineer</string>
    <string name="v_Abt">About Me</string>
    <string name="v_abtDetail">I am a hard worker
    </string>
    <string name="v_abtDetail1">I use creative Approach to problem solving
    </string>
    <string name="v_work">Work Experience</string>
    <string name="v_wrkDetails">Student</string>
    <string name="v_Edu">Education</string>
    <string name="v_eduDetail">Bsc in software Engineering</string>
    <string name="v_upBtn">Update</string>
    <string name="v_deltBtn">Delete</string>
</resources>