<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userAdViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/User_View_List_Bg_Color" >

    <TextView
        android:id="@+id/textViewADL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="377dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:background="#FF9800"
        android:paddingStart="3dp"
        android:text="@string/job_view_ad"
        android:textDirection="locale"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewJobTit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewADL"
        android:layout_marginTop="-7dp"
        android:paddingStart="5dp"
        android:text="@string/job_view_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewJobTit"
        android:layout_marginTop="2dp"
        android:paddingStart="5dp"
        android:text="@string/comp_view_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewCL"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCompany"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageViewLocation"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/com_view_add"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/textCompany"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/textQualifuc"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:text="@string/q_Desc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewJS"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textQualifuc"
        android:layout_marginTop="0dp"
        android:text="@string/job_view_sal"
        android:textDirection="rtl"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewJT"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewJS"
        android:layout_marginTop="-1dp"
        android:text="@string/job_view_t"
        android:textDirection="rtl"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="@dimen/list_view_btn_width"
        android:layout_height="@dimen/list_view_btn_height"
        android:layout_below="@+id/textViewJT"
        android:layout_alignParentStart="true"
        android:layout_marginStart="209dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@color/View_List_Up_Color"
        android:text="@string/view_job_btn"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="@dimen/list_view_btn_width"
        android:layout_height="@dimen/list_view_btn_height"
        android:layout_below="@+id/btnView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="209dp"
        android:layout_marginTop="-2dp"
        android:backgroundTint="@color/View_List_Re_Color"
        android:text="@string/view_apply_btn"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCL"
        android:layout_marginTop="-1dp"
        android:text="@string/quaTit"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
